# pyspark-k8s-boilerplate

./: .dockerignore  .gitignore  Dockerfile  LICENSE  MANIFEST.in  Makefile  README.md  env.example  pyproject.toml  setup.cfg  spark-defaults.conf
examples/: spark-pi.yaml  spark-rbac.yaml
manifests/: pyspark-interactive.yaml  pyspark-k8s-boilerplate-cloud-etl.yaml  pyspark-k8s-boilerplate-pi.yaml  pyspark-pi.yaml  spark-namespace.yaml  spark-pi.yaml  spark-rbac.yaml
secrets/: DANGEROUS-SAMPLE-k8s-secret.yaml  DANGEROUS-SAMPLE-key-file
src/pyspark_k8s_boilerplate/: main.py
src/pyspark_k8s_boilerplate/config/: __init__.py  conf.yaml  handlers.py
src/pyspark_k8s_boilerplate/configs/: config.py
src/pyspark_k8s_boilerplate/jobs/: cloud_etl.py  interactive.py  pi.py
src/pyspark_k8s_boilerplate/utils/: log.py  logger.py  pyspark.py
terraform/: main.tf  outputs.tf  variables.tf  versions.tf
tests/: test_stub.py
