[metadata]
name = pyspark_k8s_boilerplate
version = 0.0.1
author = Rod Albuyeh
author_email = Rod@albellcloud.com
description = A boilerplate template for running PySpark on cloud k8s services
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Albell-Cloud-Labs/pyspark-k8s-boilerplate
project_urls =
    Bug Tracker = https://github.com/Albell-Cloud-Labs/pyspark-k8s-boilerplate/issues
classifiers =
    Intended Audience :: Developers
    Programming Language :: Python
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.8
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Topic :: Software Development :: Libraries :: Python Modules

[options]
package_dir =
    =src
packages = find:
python_requires = >=3.6
install_requires =
    numpy
    pandas==1.1.5

[options.packages.find]
where = src

[bdist_wheel]
universal = true

[sdist]
formats = zip, gztar

# TODO see https://gist.github.com/althonos/6914b896789d3f2078d1e6237642c35c and flake8 and mypy
# TODO and see https://www.youtube.com/watch?v=H5CnZQDKfhU