[metadata]
name = pyspark_k8s_boilerplate
version = 0.0.1
author = Rod Albuyeh
author_email = Rod@albellcloud.com
description = A boilerplate template for running PySpark on cloud k8s services
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Albell-Cloud-Labs/pyspark-k8s-boilerplate
project_urls =
    Bug Tracker = https://github.com/Albell-Cloud-Labs/pyspark-k8s-boilerplate/issues
classifiers =
    Intended Audience :: Developers
    Programming Language :: Python
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.8
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Topic :: Software Development :: Libraries :: Python Modules

[options]
package_dir =
    =src
include_package_data = True
packages = find:
python_requires = >=3.6
install_requires =
    numpy==1.19.5
    pandas==1.1.5
    mypy==0.910
    flake8
    PyYAML
    types-PyYAML
    pyspark==3.1.2
    pytest

[options.packages.find]
where = src

[bdist_wheel]
universal = true

[sdist]
formats = zip, gztar

[mypy]
check_untyped_defs = true
disallow_incomplete_defs = true
disallow_untyped_defs = true

[flake8]
ignore = W191

[tool:pytest]
minversion = 6.0
addopts = -ra -q
testpaths =
    tests
    integration

# TODO add testing and code coverage here
